# shadowsettings

./: CLAUDE.md  README.md  io.github.matrixshader.ShadowSettings.json  meson.build
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-app-identity-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-dynamic-detection-engine/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-widget-factory-panel-generation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md
.planning/phases/04-visual-identity-design/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-search-polish-distribution/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-RESEARCH.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/: FLATHUB-PR.md  io.github.matrixshader.ShadowSettings.desktop  io.github.matrixshader.ShadowSettings.gresource.xml  io.github.matrixshader.ShadowSettings.gschema.xml  io.github.matrixshader.ShadowSettings.metainfo.xml  style-dark.css  style-hc-dark.css  style-hc.css  style.css
polkit/: io.github.matrixshader.ShadowSettings.policy
src/: application.vala  main.vala  window.vala
src/core/: animator.vala  category-mapper.vala  schema-scanner.vala  setting-def.vala  theme-manager.vala  widget-factory.vala
src/helpers/: logind-helper.vala  safe-settings.vala
src/panels/: appearance.vala  desktop.vala  input.vala  power.vala  windows.vala
src/registry/: appearance.vala  desktop.vala  input.vala  power.vala  privacy.vala  windows.vala
